Fixed warning message animation bug on Firefox

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -27,7 +27,7 @@
     padding: 20px;
     box-sizing: border-box;
     box-shadow: 0 8px 20px 3px #c4c4c4;
-    animation: whoop 0.4s ease-in-out;
+    animation: whoop 0.3s ease-in-out;
 }
 
 @keyframes whoop {
@@ -48,30 +48,33 @@
 }
 
 .isWarn {
+    width: 110px;
+    margin-left: auto;
+    margin-right: auto;
     color: #ff5151;
     font-weight: 500;
     text-align: center;
 }
 
 .animation {
-    animation: shake 0.17s ease-in-out 0s 2;
+    animation: shake 0.2s ease-in-out 0s 2;
 }
 
 @keyframes shake {
     0% {
-        margin-left: 0rem;
+        transform: translateX(0rem);
     }
 
     25% {
-        margin-left: 0.5rem;
+        transform: translateX(0.5rem);
     }
 
     75% {
-        margin-left: -0.5rem;
+        transform: translateX(-0.5rem);
     }
 
     100% {
-        margin-left: 0rem;
+        transform: translateX(0rem);
     }
 }
 
